feat(volcengine): 支持语音字幕时间轴
